--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
     branches: [ ecx-v1.31.0 ]
 
 jobs:
-  hello:
+  build:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
