--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,4 +10,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a multi-line script
-        run: docker ps
+        run: |
+          docker ps
+          go version
