--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Run a multi-line script
         run: |
           docker ps
