--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,13 +5,14 @@ on:
 
 jobs:
   build-4:
-    runs-on: self-hosted-1
+    runs-on: 
+      group: Default
     steps:
       - uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Run a multi-line script
         run: |
-          echo ${{ github.branch }}
+          echo ${{ github.ref }}
           docker ps
           go version
