--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,5 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Run a multi-line script
         run: |
-          echo ${{ github }}
+          echo toJSON(${{ github }})
           echo ${{ github.ref_name }}
-          docker ps
-          go version
