--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,5 +14,5 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Run a multi-line script
         run: |
-          echo ${{ github.ref_name#ecx- }}
+          echo ${${github.ref_name}#ecx-}
           echo ${{ github.ref_name }}
