--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,5 +14,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Run a multi-line script
         run: |
-          echo ${${github.ref_name}#ecx-}
+          REF="${github.ref_name}"
+          BRANCH_NAME="${REF#ecx-}"
+          echo "分支名称: $BRANCH_NAME"
           echo ${{ github.ref_name }}
