--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,4 +17,5 @@ jobs:
           REF=${{ github.ref_name }}
           BRANCH_NAME="${REF#ecx-}"
           echo "分支名称: $BRANCH_NAME"
+          echo "${${{ github.ref_name }}#ecx-}"
           echo ${{ github.ref_name }}
