--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,5 +18,5 @@ jobs:
           BRANCH_NAME="${REF#ecx-}"
           echo "分支名称: $BRANCH_NAME"
           Tag = "${${{ github.ref_name }}#ecx-}"
-          echo "tag: Tag"
+          echo "tag: $Tag"
           echo ${{ github.ref_name }}
