--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,7 @@ jobs:
           REF=${{ github.ref_name }}
           BRANCH_NAME="${REF#ecx-}"
           echo "分支名称: $BRANCH_NAME"
-          Tag="${${{ github.ref_name }}#ecx-}"
+          Tags=${{ github.ref_name }}
+          Tag="${Tags:4:}"
           echo "tag: $Tag"
           echo ${{ github.ref_name }}
