--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
 env:
   BASEIMAGE: k8s.gcr.io/debian-base-amd64:v2.0.0
   labels: ${{ github.ref_name }}
-  label: "${Tags:4:10}"
+  label: "${labels:4:10}"
   TAG: $label
 
 jobs:
