--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ env:
   BASEIMAGE: k8s.gcr.io/debian-base-amd64:v2.0.0
   labels: ${{ github.ref_name }}
   label: "${labels:4:10}"
-  TAG: $label
+  TAG: "${${{ github.ref_name }}#ecx-}"
 
 jobs:
   build-4:
