--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
     branches: [ ecx-v1.31.0 ]
 env:
   BASEIMAGE: k8s.gcr.io/debian-base-amd64:v2.0.0
-  labels: ${{ github.ref_name }}
+  labels: "${{ github.ref_name }}"
   label: "${labels:4:10}"
   TAG: "$label"
 
@@ -16,3 +16,6 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo ${{ env.TAG }}
+          str="Hello, World!"
+          substr="${str:6:5}"  # 从索引 6 开始截取 5 个字符
+          echo "$substr"
